--- a/my-app/src/components/CharacterCards/style.css
+++ b/my-app/src/components/CharacterCards/style.css
@@ -1,16 +1,13 @@
 .card {
     border-radius: 2px;
-    height: 25%;
-    width: 25%;
+    width: 10%;
     display: inline-table;
     box-shadow: 0 3px 6px #999, 0 3px 6px #999;
 }
 
-.card>.img-container {
-    overflow: hidden;
-    text-align: center;
-}
-
-.card>.img-container>img {
-    margin-top: 2.5%;
+.img {
+    height: 10%;
+    width: 10%;
+    display: table-cell;
+    vertical-align: middle;
 }
