--- a/my-app/src/components/CharacterCards/style.css
+++ b/my-app/src/components/CharacterCards/style.css
@@ -1,8 +1,11 @@
 .card {
     border-radius: 2px;
-    width: 10%;
+    width: 30%;
+    height: 10%;
     display: inline-table;
     box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+    margin-left: 2%;
+    margin-bottom: 2%;
 }
 
 .img {
